// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSpinner should render 1`] = `
<div>
  <div
    class="ButtonSpinner-sc-1jf6tdt-0 cQXTyY"
  />
</div>
`;

exports[`ButtonSpinner should render a danger variant 1`] = `
<div>
  <div
    class="ButtonSpinner-sc-1jf6tdt-0 cQXTyY"
    color="danger"
  />
</div>
`;

exports[`ButtonSpinner should render a info variant 1`] = `
<div>
  <div
    class="ButtonSpinner-sc-1jf6tdt-0 cQXTyY"
    color="info"
  />
</div>
`;

exports[`ButtonSpinner should render a primary variant 1`] = `
<div>
  <div
    class="ButtonSpinner-sc-1jf6tdt-0 cQXTyY"
    color="primary"
  />
</div>
`;

exports[`ButtonSpinner should render a reverse variant 1`] = `
<div>
  <div
    class="ButtonSpinner-sc-1jf6tdt-0 cQXTyY"
    color="reverse"
  />
</div>
`;

exports[`ButtonSpinner should render a secondary variant 1`] = `
<div>
  <div
    class="ButtonSpinner-sc-1jf6tdt-0 cQXTyY"
    color="secondary"
  />
</div>
`;

exports[`ButtonSpinner should render a transparent variant 1`] = `
<div>
  <div
    class="ButtonSpinner-sc-1jf6tdt-0 cQXTyY"
    color="transparent"
  />
</div>
`;
